@@ -68,6 +68,7 @@ public:
   MAExtent getTextSize(const char *str);
   void layout();
   void resize(int x, int y, int w, int h);
+  void setColor(Fl_Color color);
   MAHandle setDrawTarget(MAHandle maHandle);
   void setFont(Font *font) { _font = font; }
 
